--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                         <div>
                             <b>10k+</b>
                             <p>COMPANIES</p>
+                            <p>COMPANIES2</p>
+                            <p>COMPANIES3</p>
                         </div>
                         <div>
                             <b>314</b>
