--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                         <div>
                             <b>314</b>
                             <p>TEMPLATES</p>
+                            <p>TEMPLATES2</p>
+                            <p>TEMPLATES3</p>
                         </div>
                         <div>
                             <b>12M+</b>
